--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "@material-ui/core": "^1.4.0",
     "axios": "^0.16.2",
+    "google-maps-react": "^2.0.2",
+    "material-ui": "^0.20.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.1.2",
