--- a/package.json
+++ b/package.json
@@ -21,16 +21,15 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "@material-ui/core": "^1.4.0",
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
-    "google-map-react": "^1.0.5",
     "google-maps-react": "^2.0.2",
     "mongoose": "^4.11.7",
+    "prop-types": "15.5.6",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-router-dom": "^4.1.2",
-    "prop-types":"15.5.6"
-
+    "react-router-dom": "^4.1.2"
   }
 }
